--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,9 @@ dependencies {
 
     compile "com.google.dagger:dagger:$libs.daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$libs.daggerVersion"
-    compile "com.google.firebase:firebase-core:10.0.1"
-    compile "com.google.firebase:firebase-database:10.0.1"
+    compile "com.google.firebase:firebase-core:$libs.firebaseVersion"
+    compile "com.google.firebase:firebase-database:$libs.firebaseVersion"
+    compile "com.google.firebase:firebase-auth:$libs.firebaseVersion"
 
     testCompile "junit:junit:$test.junitVersion"
 }
