--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile "com.google.firebase:firebase-auth:$libs.firebaseVersion"
 
     testCompile "junit:junit:$test.junitVersion"
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
 apply plugin: 'com.google.gms.google-services'
 
