--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.message.MessageActivity" />
-        <activity android:name=".presentation.login.LoginActivity"></activity>
+        <activity android:name=".presentation.home.MessageActivity" />
     </application>
 
 </manifest>
