--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-rc1'
+        classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -41,6 +42,8 @@ ext {
             butterknifeVersion   : '8.5.1',
             constraintLayout     : '1.0.0-beta4',
             daggerVersion        : '2.9',
+            rxjava               : '2.0.6',
+            rxandroid            : '2.0.1',
             firebaseVersion      : '10.0.1'
 
     ]
