--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".presentation.home.HomeActivity" />
         <activity android:name=".presentation.message.MessageActivity" />
+        <activity android:name=".presentation.cadastro.CreateUserActivity"></activity>
     </application>
 
 </manifest>
