--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.home.HomeActivity" />
+        <activity
+            android:name=".presentation.home.HomeActivity"
+            android:parentActivityName=".presentation.login.LoginActivity" />
         <activity android:name=".presentation.message.MessageActivity" />
         <activity android:name=".presentation.cadastro.CreateUserActivity"></activity>
     </application>
