--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
         classpath 'com.google.gms:google-services:3.0.0'
-        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
+     //   classpath 'me.tatarka:gradle-retrolambda:3.6.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -38,17 +38,23 @@ ext {
 
     libraries = [
 
-            supportLibraryVersion: '25.1.1',
-            butterknifeVersion   : '8.5.1',
-            constraintLayout     : '1.0.0-beta4',
-            daggerVersion        : '2.9',
-            rxjava               : '2.0.6',
+            supportLibraryVersion: '25.3.1',
+            butterknifeVersion   : '8.6.0',
+            constraintLayout     : '1.0.2',
+            daggerVersion        : '2.11',
+            rxjava               : '2.1.2',
             rxandroid            : '2.0.1',
-            firebaseVersion      : '10.0.1'
+            firebaseVersion      : '11.0.4'
 
     ]
 
     testingLibraries = [
-            junitVersion: '4.12'
+            espressoVersion: '2.2.2',
+            junitVersion: '4.12',
+            mockitoVersion: '1.10.19',
+            powerMockito: '1.6.2',
+            hamcrestVersion: '1.3',
+            runnerVersion: '0.5',
+            rulesVersion: '0.5'
     ]
 }
